# nfl-pick-ems

./: .eslintrc.json  .gitignore  .gitmodules  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FARCASTER_FINAL_GUIDE.md  FARCASTER_PUBLISHING.md  README.md  TESTING.md  deploy.config  deploy.sh  farcaster-manifest.json  netlify.toml  package-lock.json  package.json  tailwind.config.js
.github/: TOPICS.md
BaseApp-Fees-optimized/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  schema.graphql  subgraph.yaml
Desktop/aave-liquidation-bot/substreams/: Cargo.toml  build_fixed.sh  substreams.yaml
Desktop/aave-liquidation-bot/substreams/proto/: mydata.proto
Desktop/aave-liquidation-bot/substreams/src/: lib.rs
Desktop/aave-liquidation-bot/substreams/src/pb/: .last_generated_hash  mod.rs  mydata.v1.rs
app/: globals.css  layout.tsx  page.tsx
components/: ClaimWinningsModal.tsx  FarcasterEmbed.tsx  FarcasterIntegration.tsx  GamePicker.tsx  Leaderboard.tsx  MyPicksModal.tsx  Providers.tsx  ScheduleNote.tsx  ShareResultsModal.tsx  SocialShare.tsx  WalletConnect.tsx  WeekSelector.tsx
contracts/: MockUSDC.sol  NFLPickEms.sol  Simple.sol
data/: nflSchedule.ts
graph-network-dashboard/: package-lock.json  package.json
hooks/: useGameStats.ts
lib/: contracts.ts  contracts.ts.backup  contracts_original.ts  nflSchedule.ts  wagmi.ts
oracle-service/: .env.example  README.md  index.js  package.json  test.js
public/: manifest.json
script/: Deploy.s.sol  DeployCorrect.s.sol
scripts/: add-all-missing-weeks.js  add-all-weeks-8-18.js  (+23 more)
(+64 files in other folders)
